k8s/overlays/local-dev/patches/keycloak-args.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: iam-system
spec:
  template:
    spec:
      containers:
        - name: keycloak
          args: ["start-dev"]
